test/should-fail/vsgc2199.f3
/*
 * @test/compile-error
 */
function(){"abc"} () ();
/*
Still causes a compiler failure:
 function(){} () ();
*/
